syntax = "proto3";
package moon.ibank;

// this line is used by starport scaffolding # proto/tx/import
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "moon/x/ibank/types";

// Msg defines the Msg service.
service Msg {
      rpc Send(MsgSend) returns (MsgSendResponse);
  rpc Receive(MsgReceive) returns (MsgReceiveResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgSend {
  string fromAddress = 1;
  string toAddress = 2;
  cosmos.base.v1beta1.Coin amount = 3 [(gogoproto.nullable) = false];
}

message MsgSendResponse {
}

message MsgReceive {
  string receiver = 1;
  int64 transactionId = 2;
}

message MsgReceiveResponse {
}

// this line is used by starport scaffolding # proto/tx/message
